classDiagram
    direction TB

    class Utilisateur {
        +Integer id
        +String nom
        +String prenom
        +String email
        +String mot_de_passe
        +DateTime derniere_connexion
        +DateTime created_at
        +DateTime updated_at
    }

    class Role {
        +Integer id
        +String nom
        +String guard_name
    }

    class Permission {
        +Integer id
        +String nom
    }

    class Formateur {
        +String matricule
    }

    class Etudiant {
        +String code_etudiant
    }

    class Classe {
        +Integer id
        +String nom
        +String promotion
    }

    class Competence {
        +Integer id
        +String code
        +String libelle
        +String description
    }

    class UniteApprentissage {
        +Integer id
        +String nom
        +String code
    }

    class Session {
        +Integer id
        +String nom
        +DateTime date
    }

    class QCM {
        +Integer id
        +String titre
        +Integer duree_minutes
        +Integer score_reussite
        +Boolean est_publie
    }

    class Question {
        +Integer id
        +String texte
        +String type
        +Integer points
        +String explication_feedback
    }
    %% Question.type : 'unique' | 'multiple'

    class Option {
        +Integer id
        +String texte
        +Boolean est_correcte
        +String feedback_specifique
    }

    class Tentative {
        +Integer id
        +Integer score_obtenu
        +DateTime date_debut
        +DateTime date_fin
        +String statut
    }
    %% Tentative.statut : 'en_cours' | 'soumis' | 'expire'

    class Reponse {
        +Integer id
        +DateTime repondu_a
    }

    %% ───────── RBAC ─────────
    Utilisateur "1" -- "0..*" Role : possède
    Role "*" -- "*" Permission : accorde

    %% ───────── Héritage ─────────
    Utilisateur <|-- Formateur
    Utilisateur <|-- Etudiant

    %% ───────── Structure des Classes ─────────
    Classe "1" -- "0..*" Etudiant : contient
    Formateur "1" -- "1" Classe : gère

    %% ───────── Nouvelle Structure Pédagogique ─────────
    Session "1" -- "0..*" UniteApprentissage : inclut
    UniteApprentissage "1" -- "0..*" Competence : vise
    UniteApprentissage "1" -- "0..*" QCM : est_evaluée_par

    %% ───────── Structure du QCM ─────────
    QCM "1" -- "1..*" Question : contient
    Question "1" -- "2..*" Option : propose
    Formateur "1" -- "0..*" QCM : crée

    %% ───────── Participation & Réponses ─────────
    Etudiant "1" -- "0..*" Tentative : effectue
    QCM "1" -- "0..*" Tentative : fait_objet_de
    
    Tentative "1" -- "1..*" Reponse : contient
    Reponse "0..*" -- "1" Question : concerne
    Reponse "0..*" -- "1..*" Option : choisit